--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
   <section>
     <h3>Buscar producto por ID</h3>
 
-    <input type="number" name="id" id="get_id" placeholder="ID de producto" min="1">
+    <input type="number" name="id" id="get_id" name='get_id' placeholder="ID de producto" min="1">
 
     <button type=""  onclick="searchID(get_id.value)">Buscar producto</button>
     
